--- a/src/components/MainMenu/MainMenu.module.css
+++ b/src/components/MainMenu/MainMenu.module.css
@@ -4,9 +4,12 @@
 }
 .mainMenuItem {
   display: inline-block;
+  padding: 20px 0;
 }
 .meinMenuLink {
-  padding: 1em;
+  font-weight: bold;
+  font-size: 36px;
+  margin-left: 140px;
   color: black;
   text-decoration: none;
   transition: 0.5s linear;
@@ -14,11 +17,10 @@
 .meinMenuLink:hover {
   background: lightyellow;
 }
-.meinMenuLink:global(.active ){
+.meinMenuLink:global(.active) {
   color: red;
 }
 .wrapper {
   display: block;
   background-color: lightblue;
-  width: 100ch;
 }
