--- a/src/components/MainMenu/MainMenu.module.css
+++ b/src/components/MainMenu/MainMenu.module.css
@@ -1,6 +1,9 @@
 .meinMenuList {
-  padding: 0;
+  display: flex;
   list-style: none;
+  justify-content: center;
+  gap: 140px;
+  padding-left: 0;
 }
 .mainMenuItem {
   display: inline-block;
@@ -9,7 +12,7 @@
 .meinMenuLink {
   font-weight: bold;
   font-size: 36px;
-  margin-left: 140px;
+
   color: black;
   text-decoration: none;
   transition: 0.5s linear;
@@ -22,5 +25,5 @@
 }
 .wrapper {
   display: block;
-  background-color: lightblue;
+    background-image: url(../../aestheticarena_com_downloaded_image_Gvi7.jpg);
 }
